# scion

./: go.mod  go.sum  go_deps.bzl
br-test/: config.toml  veth_setup.sh  veth_teardown.sh
br-test/config/: topology.json
br-test/config/keys/: master0.key  master1.key
go/lib/topology/: topology.go
go/lib/topology/json/: json.go
go/pkg/router/: connector.go  dataplane.go
go/pkg/router/control/: conf.go
go/pkg/router/xdp/: BUILD.bazel  br_bpfeb.go  br_bpfel.go  connector.go  dataplane.go  slow_path_connector.go
go/pkg/router/xdp/bpf/: bpf_helper_defs.h  common.h  maps.h  router.c
go/pkg/router/xdp/bpf/aes/: aes.c  aes.h
go/posix-router/: BUILD.bazel  main.go
